Компиляция скетча
Компиляция скетча...
"C:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp8266\\tools\\python3\\3.7.2-post1/python3" -I "C:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp8266\\hardware\\esp8266\\3.1.2/tools/signing.py" --mode header --publickey "C:\\Users\\sasa\\AppData\\Local\\Temp\\.arduinoIDE-unsaved202606-8168-2iutnh.kedv3\\sketch_jan6a/public.key" --out "C:\\Users\\sasa\\AppData\\Local\\arduino\\sketches\\D931B775DD2A26F97EC64001955467B1/core/Updater_Signing.h"
"C:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp8266\\tools\\xtensa-lx106-elf-gcc\\3.1.0-gcc10.3-e5f9fec/bin/xtensa-lx106-elf-g++" -D__ets__ -DICACHE_FLASH -U__STRICT_ANSI__ -D_GNU_SOURCE -DESP8266 "@C:\\Users\\sasa\\AppData\\Local\\arduino\\sketches\\D931B775DD2A26F97EC64001955467B1/core/build.opt" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp8266\\hardware\\esp8266\\3.1.2/tools/sdk/include" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp8266\\hardware\\esp8266\\3.1.2/tools/sdk/lwip2/include" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp8266\\hardware\\esp8266\\3.1.2/tools/sdk/libc/xtensa-lx106-elf/include" "-IC:\\Users\\sasa\\AppData\\Local\\arduino\\sketches\\D931B775DD2A26F97EC64001955467B1/core" -c "@C:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp8266\\hardware\\esp8266\\3.1.2/tools/warnings/default-cppflags" -Os -g -free -fipa-pta -Werror=return-type -mlongcalls -mtext-section-literals -fno-rtti -falign-functions=4 -std=gnu++17 -MMD -ffunction-sections -fdata-sections -fno-exceptions -DMMU_IRAM_SIZE=0x8000 -DMMU_ICACHE_SIZE=0x8000 -DNONOSDK22x_190703=1 -DF_CPU=80000000L -DLWIP_OPEN_SRC -DTCP_MSS=536 -DLWIP_FEATURES=1 -DLWIP_IPV6=0 -DARDUINO=10607 -DARDUINO_ESP8266_WEMOS_D1MINIPRO -DARDUINO_ARCH_ESP8266 "-DARDUINO_BOARD=\"ESP8266_WEMOS_D1MINIPRO\"" "-DARDUINO_BOARD_ID=\"d1_mini_pro\"" -DFLASHMODE_DIO "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp8266\\hardware\\esp8266\\3.1.2\\cores\\esp8266" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp8266\\hardware\\esp8266\\3.1.2\\variants\\d1_mini" "-Ic:\\Users\\sasa\\Documents\\Arduino\\libraries\\FLProg_Utilites\\src" "-Ic:\\Users\\sasa\\Documents\\Arduino\\libraries\\RT_HW_BASE\\src" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp8266\\hardware\\esp8266\\3.1.2\\libraries\\Wire" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp8266\\hardware\\esp8266\\3.1.2\\libraries\\SPI" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp8266\\hardware\\esp8266\\3.1.2\\libraries\\SoftwareSerial\\src" "C:\\Users\\sasa\\AppData\\Local\\arduino\\sketches\\D931B775DD2A26F97EC64001955467B1\\sketch\\sketch_jan6a.ino.cpp" -o "C:\\Users\\sasa\\AppData\\Local\\arduino\\sketches\\D931B775DD2A26F97EC64001955467B1\\sketch\\sketch_jan6a.ino.cpp.o"
C:\Users\sasa\AppData\Local\Temp\.arduinoIDE-unsaved202606-8168-2iutnh.kedv3\sketch_jan6a\sketch_jan6a.ino: In function 'void loop()':
C:\Users\sasa\AppData\Local\Temp\.arduinoIDE-unsaved202606-8168-2iutnh.kedv3\sketch_jan6a\sketch_jan6a.ino:38:5: error: a function-definition is not allowed here before '{' token
   38 |     {
      |     ^
Используем библиотеку FLProg_Utilites версии 1.0.0 из папки: C:\Users\sasa\Documents\Arduino\libraries\FLProg_Utilites 
Используем библиотеку RT_HW_BASE версии 7.1.1 из папки: C:\Users\sasa\Documents\Arduino\libraries\RT_HW_BASE 
Используем библиотеку Wire версии 1.0 из папки: C:\Users\sasa\AppData\Local\Arduino15\packages\esp8266\hardware\esp8266\3.1.2\libraries\Wire 
Используем библиотеку SPI версии 1.0 из папки: C:\Users\sasa\AppData\Local\Arduino15\packages\esp8266\hardware\esp8266\3.1.2\libraries\SPI 
Используем библиотеку EspSoftwareSerial версии 8.0.1 из папки: C:\Users\sasa\AppData\Local\Arduino15\packages\esp8266\hardware\esp8266\3.1.2\libraries\SoftwareSerial 
exit status 1

Compilation error: a function-definition is not allowed here before '{' token
